# Sirius-Tune-2

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  f.txt
res/: test.epd  test.py
src/: dataset.cpp  dataset.h  eval_constants.h  eval_fn.cpp  eval_fn.h  main.cpp  settings.h  thread_pool.cpp  thread_pool.h  tune.cpp  tune.h
src/sirius/: attacks.cpp  attacks.h  bitboard.h  board.cpp  board.h  defs.h  movegen.cpp  zobrist.cpp  zobrist.h
src/sirius/util/: enum_array.h  multi_array.h  murmur.h  prng.h
